# wta_elo

./: .gitignore  README.md  pyproject.toml  pytest.ini  run.py
src/: constants.py  data_cleaning.py  data_ingestion.py  logging_functions.py  model.py  pipeline.py
src/data_ingestion/: data_cleaning.py  data_scraping.py
src/model/: model.py  model_output.py
tests/: test_data_cleaning.py  test_data_ingestion.py  test_model.py
tests/data_ingestion/: test_data_cleaning.py  test_data_scraping.py
tests/model/: test_model.py  test_model_output.py
