[tool.poetry]
name = "dissertation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.1"
numpy = "^1.19.1"
scipy = "^1.5.2"
sklearn = "^0.0"
matplotlib = "^3.3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pytest = "^6.0.1"
jupyter = "^1.0.0"

